# sri-code-maintenance-agent-

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/hooks/: guard.sh  ruff-format.sh
.claude/skills/agent-sdk-reference/: SKILL.md
.claude/skills/milestone-review/: SKILL.md
docs/: requirements_v1.0.md
evals/: cases.md
src/sri_agent/: __init__.py  __main__.py  agent.py  cli.py  safety.py  tools.py
tests/: test_safety.py  test_tools.py
