[project]
name = "sri-code-maintenance-agent"
version = "0.1.0"
description = "A CLI agent, built on the Claude Agent SDK, that answers questions about and performs small maintenance tasks on a target Python repository."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
sri-agent = "sri_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sri_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
